--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_trends"
-        android:name="com.android.filmlibrary.view.itemmovie.MovieInfoFragment"
+        android:name="com.android.filmlibrary.view.trends.TrendsFragment"
         android:label="@string/ng_name_home"
         tools:layout="@layout/trends_fragment">
         <action
@@ -58,6 +58,9 @@
             android:id="@+id/action_movieInfoFragment_to_navigation_search"
             app:destination="@id/navigation_search"
             app:popUpTo="@id/navigation_search" />
+        <action
+            android:id="@+id/action_movieInfoFragment_to_personFragment"
+            app:destination="@id/personFragment" />
     </fragment>
 
     <fragment
@@ -75,4 +78,18 @@
             android:id="@+id/action_favoriteFragment_to_movieInfoFragment"
             app:destination="@id/movieInfoFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/personFragment"
+        android:name="com.android.filmlibrary.view.person.PersonFragment"
+        android:label="person_fragment"
+        tools:layout="@layout/person_fragment">
+        <action
+            android:id="@+id/action_personFragment_to_mapsFragment"
+            app:destination="@id/mapsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/mapsFragment"
+        android:name="com.android.filmlibrary.view.maps.MapsFragment"
+        android:label="fragment_maps"
+        tools:layout="@layout/maps_fragment" />
 </navigation>
