--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="nav_header_height">200</dimen>
     <dimen name="nav_header_dimen">20</dimen>
+    <dimen name="FAB_Margin_Hor">10dp</dimen>
+    <dimen name="FAB_Margin_Ver">60dp</dimen>
 </resources>
